--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.css">
     <script src="cordova.js"></script>
     <script src="node_modules/onsenui/js/onsenui.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
     <ons-navigator id="myNavigator" page="lista.html"></ons-navigator>
